fix: remove duplicate border on jumplinks accordion header

--- a/elements/pfe-jump-links/src/pfe-jump-links-nav.scss
+++ b/elements/pfe-jump-links/src/pfe-jump-links-nav.scss
@@ -210,6 +210,7 @@ pfe-accordion {
   pfe-accordion-panel {
     // hide accordion left border:
     border-left-color: transparent;
+    border-right: none;
   }
 
   // 0 -> LG breakpoint
